[gd_scene load_steps=17 format=3 uid="uid://4cgmls4ni0ol"]

[ext_resource type="Script" uid="uid://xbak67yx7sx2" path="res://character.gd" id="1_qruhm"]
[ext_resource type="Script" uid="uid://d0qsnair5mxyh" path="res://scenes/ray_cast_3d.gd" id="2_enwps"]
[ext_resource type="Texture2D" uid="uid://euvbygawmmd4" path="res://scenes/t_flashlightpattern.png" id="3_osg62"]
[ext_resource type="Script" uid="uid://cqccmjuu1l8gn" path="res://scenes/spot_light_3d.gd" id="4_jhm3m"]
[ext_resource type="Texture2D" uid="uid://bh1nnt8ofcwym" path="res://scenes/crosshair002.png" id="5_62bpa"]
[ext_resource type="Texture2D" uid="uid://bb7fy6idfbu4n" path="res://scenes/bateriapusta.png" id="6_nay4c"]
[ext_resource type="Script" uid="uid://ca54tb7jo4odi" path="res://scenes/flashlight_bar.gd" id="7_t1agc"]
[ext_resource type="Texture2D" uid="uid://cxdn7g1l5yo7c" path="res://scenes/sprint0.png" id="8_avo51"]
[ext_resource type="Texture2D" uid="uid://bejbbok2oeqil" path="res://scenes/sprintpelny.png" id="9_f8qcf"]
[ext_resource type="AudioStream" uid="uid://dgk0dfcegyffm" path="res://scenes/kroki.mp3" id="10_3p3qu"]
[ext_resource type="Script" uid="uid://dfg8jpj5ndsm0" path="res://scenes/walking_sound.gd" id="11_gttkr"]
[ext_resource type="Texture2D" uid="uid://dqi60qdpi1i11" path="res://materaily/key_small2.png" id="12_ft3y6"]
[ext_resource type="Texture2D" uid="uid://i10q5sccst0" path="res://scenes/battery.png" id="13_gmbg6"]
[ext_resource type="AudioStream" uid="uid://6uf53ogr26gp" path="res://scenes/bieganie.mp3" id="14_ehq0v"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kih21"]
radius = 0.18
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2e2fo"]
radius = 0.18
height = 1.0

[node name="character" type="CharacterBody3D"]
transform = Transform3D(-0.0784592, 0, 0.996917, 0, 1, 0, -0.996917, 0, -0.0784592, 0, 0, 0)
script = ExtResource("1_qruhm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.50611e-05, 0, 0.00158119)
mesh = SubResource("CapsuleMesh_kih21")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_2e2fo")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00782359, 0.323973, 0.019207)

[node name="SwayPivot" type="Node3D" parent="head"]

[node name="InteractRay" type="RayCast3D" parent="head/SwayPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00802362, 0, -0.101952)
target_position = Vector3(0, 0, -4)
script = ExtResource("2_enwps")

[node name="Prompt" type="Label" parent="head/SwayPivot/InteractRay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -11.5
offset_right = 54.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = " Message[key]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hand" type="Node3D" parent="head/SwayPivot"]
transform = Transform3D(0.999848, 0.000365496, -0.0174486, 0, 0.999781, 0.0209424, 0.0174524, -0.0209392, 0.999628, 0.211899, -0.251185, 0.0424757)

[node name="SpotLight3D" type="SpotLight3D" parent="head/SwayPivot/hand"]
transform = Transform3D(0.998897, 0.0314739, 0.0348517, -0.0296256, 0.99819, -0.0523359, -0.0364358, 0.0512457, 0.998021, 0, 0, 0)
light_color = Color(0.921592, 0.857513, 0.925203, 1)
light_energy = 0.0
light_projector = ExtResource("3_osg62")
light_specular = 7.115
shadow_enabled = true
distance_fade_enabled = true
spot_range = 8.0
spot_attenuation = 0.1
spot_angle = 39.55
script = ExtResource("4_jhm3m")

[node name="Camera3D" type="Camera3D" parent="head/SwayPivot"]

[node name="TextureRect" type="TextureRect" parent="head/SwayPivot/Camera3D"]
offset_left = 556.0
offset_top = 304.0
offset_right = 596.0
offset_bottom = 344.0
texture = ExtResource("5_62bpa")
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="FlashlightBar" type="TextureProgressBar" parent="."]
anchors_preset = -1
anchor_left = 0.802
anchor_top = 0.032
anchor_right = 0.945
anchor_bottom = 0.114
offset_left = -43.9041
offset_top = -17.736
offset_right = 33.36
offset_bottom = 24.128
size_flags_horizontal = 15
size_flags_vertical = 15
size_flags_stretch_ratio = 9.25
localize_numeral_system = false
max_value = 500.0
value = 500.0
nine_patch_stretch = true
texture_under = ExtResource("6_nay4c")
texture_progress = ExtResource("6_nay4c")
script = ExtResource("7_t1agc")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -354.0
offset_top = -548.0
offset_right = 393.0
offset_bottom = 433.0
grow_horizontal = 2
grow_vertical = 0
nine_patch_stretch = true
texture_under = ExtResource("8_avo51")
texture_progress = ExtResource("9_f8qcf")

[node name="walking_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_3p3qu")
volume_db = 10.0
script = ExtResource("11_gttkr")

[node name="Klucz" type="TextureRect" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 214.0
offset_top = 1.0
offset_right = 298.0
offset_bottom = 91.0
grow_horizontal = 2
texture = ExtResource("12_ft3y6")

[node name="Template_item1" type="TextureRect" parent="."]
visible = false
offset_left = 667.0
offset_top = -1.0
offset_right = 780.0
offset_bottom = 100.0
texture = ExtResource("13_gmbg6")

[node name="sprinting_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_ehq0v")
